--- a/Exercicios/EX22/fundo06.html
+++ b/Exercicios/EX22/fundo06.html
@@ -8,18 +8,17 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            background:black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover ;
+
+            /* color> image> position> repeat> [Size]> attachment*/
         }
 
         main{
             background-color: white;
             padding: 10px;
             border-radius: 10px;
-            width: 400px;
+            max-width: 550px;
             margin: auto;
             border: 1px solid blue;
             box-shadow: 5px 5px 15px rgba(0, 0, 255, 0.52);
@@ -29,7 +28,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, ducimus? Eligendi, cum eius veritatis maiores velit accusantium, atque quasi sed reiciendis quam tempora illum dolores neque dolore pariatur voluptatibus sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam maiores tempore suscipit, nesciunt error provident eligendi repudiandae debitis! Modi totam ipsa sequi. Repellat voluptatum ipsum ipsa modi deserunt dicta laborum?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, ducimus? Eligendi, cum eius veritatis maiores velit accusantium, atque quasi sed reiciendis quam tempora illum dolores neque dolore pariatur voluptatibus sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam maiores tempore suscipit, nesciunt error provident eligendi repudiandae debitis! Modi totam ipsa sequi. Repellat voluptatum ipsum ipsa modi deserunt dicta laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas beatae eaque architecto voluptas amet ipsam exercitationem maxime, alias quaerat. Voluptate mollitia totam voluptates esse nisi rerum accusantium explicabo non. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, ducimus? Eligendi, cum eius veritatis maiores velit accusantium, atque quasi sed reiciendis quam tempora illum dolores neque dolore pariatur voluptatibus sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam maiores tempore suscipit, nesciunt error provident eligendi repudiandae debitis! Modi totam ipsa sequi. Repellat voluptatum ipsum ipsa modi deserunt dicta laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas beatae eaque architecto voluptas amet ipsam exercitationem maxime, alias quaerat. Voluptate mollitia totam voluptates esse nisi rerum accusantium explicabo non.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, ducimus? Eligendi, cum eius veritatis maiores velit accusantium, atque quasi sed reiciendis quam tempora illum dolores neque dolore pariatur voluptatibus sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam maiores tempore suscipit, nesciunt error provident eligendi repudiandae debitis! Modi totam ipsa sequi. Repellat voluptatum ipsum ipsa modi deserunt dicta laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas beatae eaque architecto voluptas amet ipsam exercitationem maxime, alias quaerat. Voluptate mollitia totam voluptates esse nisi rerum accusantium explicabo non.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, ducimus? Eligendi, cum eius veritatis maiores velit accusantium, atque quasi sed reiciendis quam tempora illum dolores neque dolore pariatur voluptatibus sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam maiores tempore suscipit, nesciunt error provident eligendi repudiandae debitis! Modi totam ipsa sequi. Repellat voluptatum ipsum ipsa modi deserunt dicta laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas beatae eaque architecto voluptas amet ipsam exercitationem maxime, alias quaerat. Voluptate mollitia totam voluptates esse nisi rerum accusantium explicabo non.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, ducimus? Eligendi, cum eius veritatis maiores velit accusantium, atque quasi sed reiciendis quam tempora illum dolores neque dolore pariatur voluptatibus sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam maiores tempore suscipit, nesciunt error provident eligendi repudiandae debitis! Modi totam ipsa sequi. Repellat voluptatum ipsum ipsa modi deserunt dicta laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas beatae eaque architecto voluptas amet ipsam exercitationem maxime, alias quaerat. Voluptate mollitia totam voluptates esse nisi rerum accusantium explicabo non.</p>
     </main>
 </body>
 </html>
