--- a/Exercicios/EX23/index.html
+++ b/Exercicios/EX23/index.html
@@ -7,22 +7,21 @@
     <title>Tabelas</title>
     <style>
         table{
-           width: 500px;
-           border-collapse: collapse;
-        }
-
-        tr.cor1{
-            background-color: lightblue;
+            width: 400px;
+            height: 400px;
+            border-collapse: collapse;
         }
 
         td{
             border: 2px solid black;
-            padding: 10px;
+            padding: 8px;
+            text-align: center; 
+            vertical-align: top;
         }
 
-        td.dado{
-            background-color: lightyellow;
-        }
+         .numero{
+            text-align: right;
+         }
 
     </style>
 </head>
@@ -30,8 +29,8 @@
     <h1>Minha primeira tabela</h1>
 
     <table>
-        <tr class="cor1">
-            <td>A1</td>
+        <tr>
+            <td class="numero">1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
@@ -44,13 +43,13 @@
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">3</td>
         </tr>
 
         <tr>
             <td>A4</td>
             <td>B4</td>
-            <td class="dado">C4</td>
+            <td>C4</td>
         </tr>
 
         <tr>
